--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "@types/node": "^24.0.1",
     "@types/react-router-dom": "^5.3.3",
     "chart.js": "^4.4.9",
+    "chartjs-node-canvas": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.514.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
