--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Flask Backend API Configuration
-VITE_API_BASE_URL=http://192.168.1.225:8001
+VITE_API_BASE_URL=http://localhost:8001
 
 # Development Configuration
 VITE_APP_TITLE=Virtue Local Admin Dashboard
