Update network configuration and documentation for dynamic IP detection; enhance CORS settings and API base URL handling

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# Flask Backend API Configuration
-VITE_API_BASE_URL=http://localhost:8001
+# Flask Backend API Configuration (leave empty for dynamic IP detection)
+# VITE_API_BASE_URL=
 
 # Development Configuration
 VITE_APP_TITLE=Virtue Local Admin Dashboard
