--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "backend:setup": "cd backend && python3 -m venv venv && ./venv/bin/pip install -r requirements.txt",
-    "backend:dev": "cd backend && ./venv/bin/python3 app.py",
+    "backend:dev": "cd backend && python3 app.py",
     "backend:prod": "cd backend && ./venv/bin/gunicorn -w 4 -b 0.0.0.0:8000 app:app",
     "dev:full": "concurrently \"npm run backend:dev\" \"npm run dev\"",
     "start": "npm run dev:full"
